default/objects/dsfs__DocuSign_Recipient_Status__c/dsfs__DocuSign_Recipient_Status__c.object-meta.xml
<CustomObject>
    <description>Information about a Recipient on a DocuSign Envelope. This is a child object of DocuSign Status</description>
    <label>DocuSign Recipient Status</label>
    <nameField>
        <label>DocuSign Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Recipient Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>