default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__Account__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
    <relationshipName>R00N80000002vw3gEAA</relationshipName>
    <type>Lookup</type>
</CustomField>