default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__Contact__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
    <relationshipName>R00NS0000000WUMyMAO</relationshipName>
    <type>Lookup</type>
</CustomField>