default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__Date_Declined__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Date_Declined__c</fullName>
    <description>The Date that the Recipient declined to sign the envelope</description>
    <label>Date Declined</label>
    <type>DateTime</type>
</CustomField>