default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__Date_Delivered__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Date_Delivered__c</fullName>
    <description>The Date that the recipient received (opened) the envelope</description>
    <label>Date Delivered</label>
    <type>DateTime</type>
</CustomField>