default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Date_Sent__c</fullName>
    <description>The Date that this recipient was sent an invitation to the envelope</description>
    <label>Date Sent</label>
    <type>DateTime</type>
</CustomField>