default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Date_Signed__c</fullName>
    <description>The Date that the Recipient signed the Envelope</description>
    <label>Date Signed</label>
    <type>DateTime</type>
</CustomField>