default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Decline_Reason__c</fullName>
    <description>The reason that the Recipient gave for declining to sign the Envelope</description>
    <label>Declined Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>