default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__Decline_Reason_Extended__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Decline_Reason_Extended__c</fullName>
    <label>Declined Reason Extended</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>