default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__DocuSign_Recipient_Company__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_Recipient_Company__c</fullName>
    <label>DocuSign Recipient Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>