default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__DocuSign_Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_Recipient_Email__c</fullName>
    <description>The email address that the recipient used in the DocuSign System.</description>
    <label>DocuSign Recipient Email</label>
    <type>Email</type>
</CustomField>