default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__DocuSign_Recipient_Id__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_Recipient_Id__c</fullName>
    <externalId>true</externalId>
    <label>DocuSign Recipient Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>