default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__DocuSign_Routing_Order__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_Routing_Order__c</fullName>
    <label>DocuSign Routing Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>