default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Envelope_Id__c</fullName>
    <description>The DocuSign EnvelopeId that this Recipient is related to</description>
    <label>Envelope Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>