default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__Lead__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
    <relationshipName>R00NS0000000WUMzMAO</relationshipName>
    <type>Lookup</type>
</CustomField>