default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__Parent_Status_Record__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Parent_Status_Record__c</fullName>
    <label>DocuSign Status Record</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
    <relationshipName>R00NS0000000WUO2MAO</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>