default/objects/dsfs__DocuSign_Recipient_Status__c/fields/dsfs__Recipient_Status__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Recipient_Status__c</fullName>
    <description>The last status reported by the DocuSign System for this recipient</description>
    <label>Recipient Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>