default/objects/dsfs__DocuSign_Recipient_Status__c/listViews/dsfs__All.listView-meta.xml
<ListView>
    <fullName>dsfs__All</fullName>
    <columns>NAME</columns>
    <columns>dsfs__DocuSign_Recipient_Email__c</columns>
    <columns>dsfs__DocuSign_Routing_Order__c</columns>
    <columns>dsfs__Recipient_Status__c</columns>
    <columns>dsfs__Parent_Status_Record__c</columns>
    <columns>dsfs__Date_Sent__c</columns>
    <columns>dsfs__Date_Delivered__c</columns>
    <columns>dsfs__Date_Signed__c</columns>
    <columns>dsfs__Date_Declined__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>